handled dataset operation with name not id
